package pt.ipp.isep.dei.controller;

import pt.ipp.isep.dei.service.AuthenticationService;
import pt.ipp.isep.dei.auth.UserSession;
import pt.ipp.isep.dei.repository.GameRepository;
import pt.ipp.isep.dei.repository.CityRepository;
import pt.ipp.isep.dei.service.CityService;
import pt.ipp.isep.dei.mapper.MapMapper;
import pt.ipp.isep.dei.mapper.CityMapper;
import pt.ipp.isep.dei.dto.MapDTO;
import pt.ipp.isep.dei.dto.AddCityRequestDTO;
import java.util.List;


public class AddCityController {
    private AuthenticationService authService;
    private GameRepository gameRepository;
    private CityService cityService;
    private MapMapper mapMapper;
    private CityMapper cityMapper;

    public AddCityController() {
        throw new UnsupportedOperationException("Not implemented yet");
    }

    /**
     * Gets current user role
     */
    public String getCurrentUserRole() {
        throw new UnsupportedOperationException("Not implemented yet");
    }

    /**
     * Gets list of available maps
     */
    public List<MapDTO> getMapList() {
        throw new UnsupportedOperationException("Not implemented yet");
    }

    /**
     * Validates city data before creation
     */
    public boolean validateCityData(AddCityRequestDTO request) {
        throw new UnsupportedOperationException("Not implemented yet");
    }

    /**
     * Adds a city to the map
     */
    public void addCity(AddCityRequestDTO request) {
        throw new UnsupportedOperationException("Not implemented yet");
    }

    /**
     * Gets available maps (legacy method for compatibility)
     */
    public void getAvailableMaps() {
        throw new UnsupportedOperationException("Not implemented yet");
    }

    /**
     * Gets city names (legacy method for compatibility)
     */
    public String getCityNames(String name) {
        throw new UnsupportedOperationException("Not implemented yet");
    }

    /**
     * Validates house blocks count (legacy method for compatibility)
     */
    public int validateHouseBlocksCount(int count) {
        throw new UnsupportedOperationException("Not implemented yet");
    }

    /**
     * Adds city (legacy method for compatibility)
     */
    public void addCity(String mapId, String name, int x, int y, int blocksCount, int blockLocations) {
        throw new UnsupportedOperationException("Not implemented yet");
    }
}
