package pt.ipp.isep.dei.domain.validator;

import pt.ipp.isep.dei.dto.AddCityRequestDTO;

/**
 * Validator for City operations
 */
public class CityValidator {

    public CityValidator() {
    }

    /**
     * Validates if city name is valid
     */
    public static boolean isValidName(String name) {
        throw new UnsupportedOperationException("Not implemented yet");
    }

    /**
     * Validates if house blocks count is valid
     */
    public static boolean isValidHouseBlocksCount(int count) {
        throw new UnsupportedOperationException("Not implemented yet");
    }

    /**
     * Validates complete city data
     */
    public static void validateCityData(AddCityRequestDTO request) {
        throw new UnsupportedOperationException("Not implemented yet");
    }
}
