package pt.ipp.isep.dei.dto;

public class LocationDTO {
    private int x;
    private int y;

    public LocationDTO(int x, int y) {
        this.x = x;
        this.y = y;
    }

    // Getters and setters
    public int getX() { return x; }
    public int getY() { return y; }
    public void setX(int x) { this.x = x; }
    public void setY(int y) { this.y = y; }
}
