package pt.ipp.isep.dei.repository;

import pt.ipp.isep.dei.domain.map.City;

/**
 * Repository for City operations
 */
public class CityRepository {

    public CityRepository() {
    }

    /**
     * Saves a city
     */
    public void saveCity(City city) {
        throw new UnsupportedOperationException("Not implemented yet");
    }

    /**
     * Finds city by name and map
     */
    public City findByNameAndMap(String name, Long mapId) {
        throw new UnsupportedOperationException("Not implemented yet");
    }
}
