package pt.ipp.isep.dei.ui;

public class AddCityUI {

    public AddCityUI() {
    }

    /**
     * Shows available maps
     */
    public void showAvailableMap() {
        throw new UnsupportedOperationException("Not implemented yet");
    }

    /**
     * Requests city name from user
     */
    public void requestCityName() {
        throw new UnsupportedOperationException("Not implemented yet");
    }

    /**
     * Requests coordinates from user
     */
    public void requestCoordinates() {
        throw new UnsupportedOperationException("Not implemented yet");
    }

    /**
     * Requests house blocks count from user
     */
    public void requestHouseBlocksCount() {
        throw new UnsupportedOperationException("Not implemented yet");
    }

    /**
     * Requests block placement method from user
     */
    public void requestBlockPlacementMethod() {
        throw new UnsupportedOperationException("Not implemented yet");
    }

    /**
     * Requests block coordinates for manual placement
     */
    public int requestBlockCoordinates(int count) {
        throw new UnsupportedOperationException("Not implemented yet");
    }
}
